[package]
authors = ["Pietro Brenna <pietrobrenna@hotmail.it>"]
name = "gp"
version = "0.1.0"
[dependencies]
ctrlc = "*"
pbr = "*"
rand = "0.3"
evco = {git = "https://github.com/pbrenna/evco", branch="configurable" }
spiril = {git = "https://github.com/pbrenna/spiril", branch="master"}

[dependencies.oarray]
path = "../oarray/"
