[package]
authors = ["Pietro Brenna <pietrobrenna@hotmail.it>"]
name = "gp"
version = "0.1.0"
[dependencies]
clap = "2.32.0"
pbr = "1.0.1"
rand = "0.5.5"
log="0.4.5"
simplelog="0.5.2"

[dependencies.evco]
branch = "configurable"
git = "https://github.com/pbrenna/evco"

[dependencies.oarray]
path = "../oarray/"

[dependencies.spiril]
branch = "master"
git = "https://github.com/pbrenna/spiril"
