[package]
authors = ["Pietro Brenna <pietrobrenna@hotmail.it>"]
name = "gp_inc"
version = "0.1.0"

[dependencies]
log="0.4.5"
simplelog="0.5.2"
pbr = "1.0.1"
rand = "0.5.5"
oarray = {path = "../oarray/"}
streaming-iterator = "0.1.4"

[dependencies.spiril]
#path = "../../spiril/"
branch = "master"
git = "https://github.com/pbrenna/spiril"

[dependencies.clap]
version = "2.32.0"
default-features = false
features = ["color" ]

[dependencies.evco]
branch = "configurable"
git = "https://github.com/pbrenna/evco"
#path = "../../evco/"