[package]
authors = ["Pietro Brenna <pietrobrenna@hotmail.it>"]
name = "results_analysis"
version = "0.1.0"
[[bin]]
name = "is_linear"
path = "src/is_linear.rs"

[[bin]]
name = "check_boolfun_props"
path = "src/check_boolfun_props.rs"

[[bin]]
name = "gen_strings_of_weight"
path = "src/gen_strings_of_weight.rs"


[dependencies.oarray]
path = "../oarray/"
